# urbanflow

./: .gitignore  PRD_Traffic_Demand_Prediction.md  README.md  main.py  pyproject.toml  requirements.txt
.agents/: AGENTS.md
app/: main.py
app/assets/: style.css
app/components/: charts.py  prediction_card.py  sidebar.py
config/: ensemble_config.yaml  feature_config.yaml
data/processed/: test.csv  train.csv  val.csv
models/: best_params.json  feature_engineer.pkl  lgbm_model.pkl  model_registry.json  rf_model.pkl  xgb_model.pkl
notebooks/: 01_eda.ipynb  01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_model_training_and_tuning.ipynb  04_model_evaluation_and_explainability.ipynb  run_eda.py
reports/: evaluation_report.md
src/: ensemble.py  evaluate.py  features.py  predict.py  preprocessing.py  train.py
tests/: test_ensemble.py  test_features.py  test_predict.py  test_preprocessing.py  test_train.py
