[project]
name = "urbanflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "joblib",
    "streamlit",
    "plotly",
    "pyyaml",
    "pytest",
    "pytest-cov",
    "matplotlib",
    "seaborn",
    "optuna",
    "shap>=0.49.1",
    "numba>=0.65.0",
]
